--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>The Benefits of Yoga</title>
+    <title>The Benefits of Yoga text</title>
 </head>
 
 <body>
@@ -46,4 +46,10 @@
 
     
 </body>
+
+<div>
+<footer>
+<h3>A yoga play list to inspire people</h3>
+    </footer>
+    </div>
 </html>
